# OmniAdaptor

./: README.en.md  README.md
omnioperator/omniop-spark-extension/: pom.xml
omnioperator/omniop-spark-extension/cpp/: CMakeLists.txt
omnioperator/omniop-spark-extension/cpp/src/: CMakeLists.txt
omnioperator/omniop-spark-extension/cpp/test/: CMakeLists.txt
omnioperator/omniop-spark-extension/cpp/test/benchmark/: CMakeLists.txt  shuffle_benchmark.cpp
omnioperator/omniop-spark-extension/spark-extension-core/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-package/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-shims/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-shims/spark32-modify/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-shims/spark32-shim/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-shims/spark33-modify/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-shims/spark33-shim/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-shims/spark34-modify/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-shims/spark34-shim/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-shims/spark35-modify/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-shims/spark35-shim/: pom.xml
omnioperator/omniop-spark-extension/spark-extension-ut/: pom.xml
omnistream/omniop-flink-extension/: README.md
omnistream/omniop-flink-extension/java/: pom.xml
omnistream/omniop-flink-extension/omni-table-planner/: pom.xml
(+250 files in other folders)
